syntax = "proto3";
option java_package = "com.game.protoGen";
option go_package = "/protoGen";

import "ProtoCommon.proto";

message SceneTeamAvatar
{
  int64 player_uid = 1;  // 玩家uid
  int64 avatar_guid = 2; // 角色Guid
  int32 scene_id = 3;    // 角色所处场景ID
  int32 entity_id = 4;   // 角色在所处场景上的EntityId
}